bk_ida/gccida/g0/reload_inner_reg_of_subreg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/reload.c:1259:41: error: must use 'enum' tag to refer to type 'machine_mode'
int  reload_inner_reg_of_subreg( rtx x, machine_mode mode) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/reload.c:1328:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = mode_class_0[*( ( unsigned __int8 *)inner + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/reload.c:1329:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)inner + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_inner_reg_of_subreg/src/obj/reload.o] Error 1
